--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test:addToCart": "npx cypress run --spec cypress/e2e/tests/addToCartTest.cy.js",
+    "test:registerFlow": "npx cypress run --spec cypress/e2e/tests/registerTest.cy.js",
     "cypress:open": "cypress open"
   },
   "keywords": [],
