--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,3 +10,11 @@ jobs:
       # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        with: 
+         command: npm run test:addToCart
+
+      - name: Cypress Test Reports
+      - uses: actions/upload-artifact@v4
+        with:
+          name: my-artifact
+          path: cypress/reports/html 
