--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Cypress Test Reports
       - uses: actions/upload-artifact@v4
         with:
-          name: my-artifact
+          name: Mochawesome HTML Report
           path: cypress/reports/html 
