--- a/.github/workflows/parallel-test-build.yml
+++ b/.github/workflows/parallel-test-build.yml
@@ -13,6 +13,12 @@ jobs:
         with:
          command: npm run test:addToCart
 
+      - name: Cypress Test Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: Mochawesome HTML Report - Add to Cart
+          path: cypress/reports/html    
+
 
   Register-Flow-run:
     runs-on: ubuntu-22.04
@@ -25,3 +31,9 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
          command: npm run test:registerFlow 
+
+      - name: Cypress Test Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: Mochawesome HTML Report - Registration flow
+          path: cypress/reports/html    
